Oct 17, 2008 - John Schember <john@nachtimwald.com>

* Do not remove the reply in PodcastEpisode::downloadSuccessful because
  it's still needed. PodcastEpisode::cleanDownload will take care of that
  later.
* Added config option to ignore not modified responses from the server.
* Updated documentation.


Oct 16, 2008 - John Schember <john@nachtimwald.com>

* Check last modified header when downloading RSS feeds and do not download
  the feed if it has not been modified since it was last checked.
* New database format.
* Framework to update the database for when new features are added.
* Opts displays name of the executable instead of the application's internal
  name.
* Correctly sets file name when dealing with redirects.
* Re-structure some client code.
* User agent is set for downloads. Server will see the name of this application
  as the downloading client.
* Fixed a typo.


Oct 6, 2008 - John Schember <john@nachtimwald.com>

* Signify which messages are for verbose output.
* Remove error message than can cause a seg fault.
* Clean up user displayed messages.
* Clean up strings.
* Download error message more meaningful.


Oct 5, 2008 - John Schember <john@nachtimwald.com>

* Filter explicit expisodes feature.
* Add object = 0 after a few deletes.


Sep 23, 2008 - John Schember <john@nachtimwald.com>

* Use qMin and qMax where appropriate.


Sep 21, 2008 - John Schember <john@nachtimwald.com>

* 1.0.3 Release
* Build system shows the build type and install prefix.
* De-increment of the download count does not happen twice with failed items.


Sep 20, 2008 - John Schember <john@nachtimwald.com>

* Fix setting version for trunk builds.
* Fix closing file after download completes.


Sep 19, 2008 - John Schember <john@nachtimwald.com>

* 1.0.2 Release.
* Better checking of errors when finished in DownloadItem.
* Verbose mode.
* Remove debug messages that should not have been committed.
* Replace QCoreApplication::quit() with exit() so application terminates